<resources>
    <string name="app_name">hw 1.3</string>
    <string name="title">Комплексная система мониторинга здоровья|Сагутдинов</string>
    <string name="name">Ваше ФИО</string>
    <string name="age">Ваш возраст</string>
    <string name="save">Сохранить</string>
    <string name="pressure">Давление</string>
    <string name="etc">Жизненные показатели</string>
    <string name="check">Тахикардия</string>
    <string name="topPressure">Верхнее давление</string>
    <string name="lowerPressure">Нижнее давление</string>
    <string name="pulse">Пульс</string>
    <string name="weight">Вес</string>
    <string name="steps">Количество шагов</string>
    <string name="msg">Была добавлена карточка для</string>
    <string name="toastType">Неверный формат</string>
    <string name="saved">Данные были сохранены для пользователя \u0020</string>
    <string name="error">Ошибка </string>
    <string name="small">Введены не все данные </string>
</resources>
