<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pressure">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <EditText
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/topPressure"
        app:layout_constraintBottom_toTopOf="@+id/low"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lowerPressure"
        app:layout_constraintBottom_toTopOf="@+id/bit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pulse"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="date"
        android:text="date"
        app:layout_constraintBottom_toTopOf="@+id/savePressure"
        app:layout_constraintEnd_toStartOf="@+id/editText8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="172dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="time"
        android:text="time"
        app:layout_constraintBottom_toTopOf="@+id/savePressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/bit"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/savePressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

</androidx.constraintlayout.widget.ConstraintLayout>